add login and jwt auth
